2006-04-18  Guillaume Smet <guillaume-pg@smet.org>

	* query count peaks don't depend anymore on the order of the log file
	(useful when you concatenate 2 log files from 2 different servers)

2006-04-17  Guillaume Smet <guillaume-pg@smet.org>

	* added tooltip with hourly statistics on errors too

2006-04-06  Guillaume Smet <guillaume-pg@smet.org>

	* only generate graphs if we have enough data to do it
	* added -title option to define the title of the report

2006-04-05  Guillaume Smet <guillaume-pg@smet.org>

	* added the framework for unit testing on real log files
	* first test case

2006-04-04  Guillaume Smet <guillaume-pg@smet.org>

	* added a tooltip with hourly statistics on normalized queries

2006-04-03  Guillaume Smet <guillaume-pg@smet.org>

	* added a tooltip with detailed information on queries and errors
	* only display identified statistics if different from overall

2006-04-02  Guillaume Smet <guillaume-pg@smet.org>

	* added a stderr parser based on Tatsuo Ishii's suggestion:
	http://pgfoundry.org/forum/forum.php?thread_id=735&forum_id=555

2006-04-01  Guillaume Smet <guillaume-pg@smet.org>

	* added filter on database and user

2006-03-31  Open Wide <guillaume.smet@openwide.fr>

	* added two more lines to ignore
	* fixed error reporting for php 4.4
	* fixed a bug when two consecutive blocks have the same command line
	number in the same logstream (should not happen but seems to happen
	sometimes anyway)

2006-03-27  Open Wide <guillaume.smet@openwide.fr>

	* removed a few notices with PHP 5.1
	* added another line to ignore

2006-03-26  Guillaume Smet <guillaume-pg@smet.org>

	* improved the errors report
	* released 0.5

2006-03-25  Guillaume Smet <guillaume-pg@smet.org>

	* fixed a bug reported by Simon Riggs on pgsql-hackers
	http://archives.postgresql.org/pgsql-hackers/2006-03/msg00694.php
	* added html output for hourly statistics report
	* rewrote the configuration stuff to use constants instead of a function
	* fixed unit tests