@@ -24,7 +24,7 @@
 class SyslogPostgreSQLParser extends PostgreSQLParser {
 	var $regexpSyslogContext;
 	
-	function SyslogPostgreSQLParser($syslogString = 'postgres') {
+	function SyslogPostgreSQLParser($syslogString = CONFIG_SYSLOG_IDENTITY) {
 		$this->regexpSyslogContext = new RegExp('/^([A-Z][a-z]{2} [ 0-9]{2} [0-9]{2}:[0-9]{2}:[0-9]{2}) .*? '.$syslogString.'\[(\d{1,5})\]: \[(\d{1,20})(?:\-(\d{1,5}))?\] /');
 	}
 
